samples/_failures_safe/1761216590_eeeef9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e86aced.c: In function ‘main’:
./samples/SAFE/__tmp_1e86aced.c:163:12: error: missing terminating " character
  163 |     printf("Enter expression to token
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1e86aced.c:163:5: error: expected expression at end of input
  163 |     printf("Enter expression to token
      |     ^~~~~~
./samples/SAFE/__tmp_1e86aced.c:163:5: error: expected declaration or statement at end of input
